--- a/templates/exit-recognition.html
+++ b/templates/exit-recognition.html
@@ -4,5 +4,5 @@
 <h1>출차 인식</h1>
 <p>여기서 출차 인식 모델을 실행하고, 결과를 표시할 수 있습니다.</p>
 <!-- 사람 인식 결과를 보여줄 영역 -->
-<img src="{{ url_for('disabled_vehicle_recognition_feed') }}" alt="사람 인식 결과" />
+<img src="/" alt="사람 인식 결과" />
 {% endblock %}
