--- a/templates/exit_recognition_list.html
+++ b/templates/exit_recognition_list.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='report.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='back.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='excel_pdf.css') }}">
-<h1>출차 인식 리스트</h1>
+
+<h1>출차 리스트</h1>
+{% if data %}
 <table border="1">
     <thead>
         <tr>
@@ -18,18 +20,34 @@
         <tr>
             <td>{{ record.vehicle_number }}</td>
             <td>{{ record.phone_number }}</td>
-            <td>{{ record.recognition_time }}</td>
+            <td>{{ record.recognition_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
-<div class="download-buttons">
-    <form action="{{ url_for('export_category_data', category='entry', file_format='pdf') }}" method="get">
-        <button type="submit" class="pdf-button">PDF로 저장</button>
-    </form>
-    <form action="{{ url_for('export_category_data', category='entry', file_format='excel') }}" method="get">
-        <button type="submit" class="excel-button">Excel로 저장</button>
-    </form>
-<button onclick="location.href='{{ url_for('search') }}'" class="back-button">뒤로가기</button>
+
+<!-- 페이지네이션 -->
+<div class="pagination">
+    {% if page > 1 %}
+    <a href="{{ url_for('exit_recognition_data', page=page - 1) }}" class="pagination-button">이전</a>
+    {% endif %}
+    <span>페이지 {{ page }} / {{ total_pages }}</span>
+    {% if page < total_pages %}
+    <a href="{{ url_for('exit_recognition_data', page=page + 1) }}" class="pagination-button">다음</a>
+    {% endif %}
 </div>
+
+{% else %}
+<p>No records found.</p>
+{% endif %}
+    <!-- PDF 및 Excel 다운로드 버튼 -->
+    <div class="download-buttons">
+        <form action="{{ url_for('export_category_data', category='entry', file_format='pdf') }}" method="get">
+            <button type="submit" class="pdf-button">PDF로 저장</button>
+        </form>
+        <form action="{{ url_for('export_category_data', category='entry', file_format='excel') }}" method="get">
+            <button type="submit" class="excel-button">Excel로 저장</button>
+        </form>
+        <button onclick="location.href='{{ url_for('search') }}'" class="back-button">뒤로가기</button>
+    </div>
 {% endblock %}
