--- a/templates/exit_recognition.html
+++ b/templates/exit_recognition.html
@@ -15,6 +15,6 @@
 </div>
 
 <!-- 우측 하단 버튼 -->
-<button class="exit-recognition-btn" onclick="location.href='{{ url_for('exit_recognition_data') }}'">출차 리스트</button>
+<button class="list-recognition-btn" onclick="location.href='{{ url_for('exit_recognition_data') }}'">출차 리스트</button>
 
 {% endblock %}
