--- a/templates/entry_recognition.html
+++ b/templates/entry_recognition.html
@@ -1,8 +1,8 @@
 {% extends 'home.html' %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='easyocr.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='back.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='video.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='exit_btn.css') }}">
 
 <div class="entry-recognition-container">
     <!-- 제목 섹션 -->
@@ -10,15 +10,14 @@
         <h1>입차 인식</h1>
     </div>
 
-    <!-- 이미지 섹션 -->
-    <div class="image-section">
-        <div class="original-image-container">
-            <h2>원본 이미지</h2>
-            <img src="{{ url_for('static', filename=original_image) }}" alt="원본 이미지">
-        </div>
-        <div class="enhanced-image-container">
-            <h2>처리된 이미지</h2>
-            <img src="{{ url_for('static', filename=enhanced_image) }}" alt="처리된 이미지">
+    <!-- 비디오 스트리밍 섹션 -->
+    <div class="video-section">
+        <h2>실시간 비디오 스트리밍</h2>
+        <div class="video-container">
+            <!-- 4개의 비디오 스트림을 보여주는 그리드 섹션 -->
+            <div class="video-grid">
+                <img class="video-stream1" src="{{ url_for('entry_video_feed') }}" alt="Live Stream1">
+            </div>
         </div>
     </div>
 
@@ -35,5 +34,10 @@
         <p class="no-results">번호판을 인식하지 못했습니다.</p>
         {% endif %}
     </div>
+
 </div>
+
+<!-- 우측 하단 버튼 -->
+<button class="list-recognition-btn" onclick="location.href='{{ url_for('entry_recognition_data') }}'">입차 리스트</button>
+
 {% endblock %}
