--- a/templates/past/recognition_list.html
+++ b/templates/past/recognition_list.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='excel_pdf.css') }}">
 
 <body>
-    <h1>입차 리스트</h1>
+    <h1>{{ category_name }} 리스트</h1>
     {% if data %}
     <table border="1">
         <thead>
@@ -33,20 +33,20 @@
     <!-- 페이지네이션 -->
     <div class="pagination">
         {% if page > 1 %}
-        <a href="{{ url_for('entry_recognition_data', page=page - 1) }}">이전</a>
+        <a href="{{ url_for('recognition_list', category=category, page=page - 1) }}">이전</a>
         {% endif %}
         <span>페이지 {{ page }} / {{ total_pages }}</span>
         {% if page < total_pages %}
-        <a href="{{ url_for('entry_recognition_data', page=page + 1) }}">다음</a>
+        <a href="{{ url_for('recognition_list', category=category, page=page + 1) }}">다음</a>
         {% endif %}
     </div>
 
     <!-- PDF 및 Excel 다운로드 버튼 -->
     <div class="download-buttons">
-        <form action="{{ url_for('export_category_data', category='entry', file_format='pdf') }}" method="get">
+        <form action="{{ url_for('export_category_data', category=category, file_format='pdf') }}" method="get">
             <button type="submit" class="pdf-button">PDF로 저장</button>
         </form>
-        <form action="{{ url_for('export_category_data', category='entry', file_format='excel') }}" method="get">
+        <form action="{{ url_for('export_category_data', category=category, file_format='excel') }}" method="get">
             <button type="submit" class="excel-button">Excel로 저장</button>
         </form>
         <button onclick="location.href='{{ url_for('search') }}'" class="back-button">뒤로가기</button>
