--- a/templates/report.html
+++ b/templates/report.html
@@ -5,16 +5,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='report.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='back.css') }}">
 
-<h1>보고서 작성</h1>
-
-<!-- 버튼 클릭 폼 -->
-<form method="POST">
-    <!-- 출근 버튼 클릭 시 start_time 기록 -->
-    <button type="submit" name="start_time_button" value="start_time">출근</button>
-
-    <!-- 보고서 작성 버튼 클릭 시 end_time 기록 -->
-    <button type="submit" name="end_time_button" value="end_time">퇴근</button>
-</form>
+<h1>출퇴근 목록</h1>
 
 <!-- 보고서 테이블 -->
 <table>
