모델 완성후 적용만 하면 완료

--- a/templates/home.html
+++ b/templates/home.html
@@ -47,9 +47,7 @@
                 {% if session['role'] == 'user' %}
                     <li><a href="/report">보고서 작성</a></li>
                 {% endif %}
-                
-                <!-- 모든 사용자 공통 링크 -->
-                <li><a href="/emergencies">문의 사항</a></li>
+                <li><a href="/inquiry">문의 사항</a></li>
             {% endif %}
         </ul>
     </nav>
