--- a/templates/report.html
+++ b/templates/report.html
@@ -8,7 +8,7 @@
 <h1>보고서 작성</h1>
 
 <!-- 버튼 클릭 폼 -->
-<form method="POST">
+<form method="POST" class="start_end">
     <!-- 출근 버튼 클릭 시 start_time 기록 -->
     <button type="submit" name="start_time_button" value="start_time">출근</button>
 
