--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -14,28 +14,16 @@
                 <th>이미지</th>
             </tr>
         </thead>
-        <tbody>
-            {% for item in all_data %}
-                <tr>
-                    <td>
-                        {% if item.__class__.__name__ == 'EntryRecognition' %}
-                            입차 인식
-                        {% elif item.__class__.__name__ == 'ExitRecognition' %}
-                            출차 인식
-                        {% elif item.__class__.__name__ == 'LightVehicleRecognition' %}
-                            경차 인식
-                        {% elif item.__class__.__name__ == 'DisabledVehicleRecognition' %}
-                            장애인 차량 인식
-                        {% elif item.__class__.__name__ == 'IllegalParkingVehicleRecognition' %}
-                            불법 주차 인식
-                        {% endif %}
-                    </td>
-                    <td>{{ item.vehicle_number }}</td>
-                    <td>{{ item.recognition_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                    <td>{{ item.image_path if item.image_path else '없음' }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
+            <tbody>
+                {% for item in all_data %}
+                    <tr>
+                        <td>{{ item.category }}</td>
+                        <td>{{ item.vehicle_number }}</td>
+                        <td>{{ item.recognition_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                        <td>{{ item.image_path if item.image_path else '없음' }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
     </table>
 
     <!-- 페이지네이션 -->
