문의 사항 표 역순, 필요없는 파일 past로 이동

--- a/templates/video_recognition.html
+++ b/templates/video_recognition.html
@@ -8,10 +8,8 @@
 <main>
 
     <div class="video-container" style="display: block;">
-        <div class="video-section" style="display: block;">
-           <!-- videoFeed의 src를 동적으로 설정 -->
-           <video id="videoFeed" width="80%" height="auto" autoplay></video>
-        </div>
+        <!-- videoFeed의 src를 동적으로 설정 -->
+        <video id="videoFeed" width="auto" height="auto" autoplay></video>
     </div>
 
     <!-- OCR 결과 섹션 -->
