--- a/templates/report.html
+++ b/templates/report.html
@@ -7,12 +7,12 @@
 
 <h1>보고서 작성</h1>
 
-<!-- 버튼 클릭 폼 -->
+<!-- 출근 및 퇴근 버튼 -->
 <form method="POST" class="start_end">
     <!-- 출근 버튼 클릭 시 start_time 기록 -->
     <button type="submit" name="start_time_button" value="start_time">출근</button>
 
-    <!-- 보고서 작성 버튼 클릭 시 end_time 기록 -->
+    <!-- 퇴근 버튼 클릭 시 end_time 기록 -->
     <button type="submit" name="end_time_button" value="end_time">퇴근</button>
 </form>
 
@@ -32,12 +32,12 @@
     <tbody>
         {% for report in reports.items %}
         <tr>
-            <td>{{ report.user_name }}</td> <!-- 수정된 부분 -->
+            <td>{{ report.user_name }}</td>
             <td>{{ report.entry_count }}</td>
             <td>{{ report.exit_count }}</td>
             <td>{{ report.current_parking_count }}</td>
-            <td>{{ report.start_time.strftime('%Y-%m-%d %H:%M:%S') if report.start_time else '' }}</td> <!-- 초 포함 -->
-            <td>{{ report.end_time.strftime('%Y-%m-%d %H:%M:%S') if report.end_time else '' }}</td> <!-- 초 포함 -->
+            <td>{{ report.start_time.strftime('%Y-%m-%d %H:%M:%S') if report.start_time else '' }}</td> 
+            <td>{{ report.end_time.strftime('%Y-%m-%d %H:%M:%S') if report.end_time else '' }}</td> 
             <td>{{ report.total_fee }}원</td>
         </tr>
         {% endfor %}
